# loop_lib

./: Cargo.toml
.github/workflows/: auto-format.yml  ci.yml  notify-downstream.yml
.handoff/context/: capsule.json
.kb/: config.toml
src/: lib.rs  tests.rs
