[package]
name = "loop_lib"
version = "0.2.25"
edition = "2021"
license = "MIT"
repository = "https://github.com/FlexNetOS/loop_lib"
description = "Core loop engine library for running commands across directories"

[dependencies]
anyhow = "1.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
diff = "0.1"
indicatif = "0.17"
is-terminal = "0.4"

[dev-dependencies]
tempfile = "3.3"
